--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "dawger",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bad-words": "^1.6.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-rate-limit": "^3.1.1",
+    "firebase": "^5.7.2",
+    "firebase-tools": "^6.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  },
+  "description": ""
 }
